src/main/java/com/example/career/global/error/exception/UnAuthorizedException.java
package com.example.career.global.error.exception;

import com.example.career.global.error.errorcode.ErrorCode;

public class UnAuthorizedException extends CustomException {

    public UnAuthorizedException() {
        super(ErrorCode.UNAUTHORIZED);
    }
}
